# FlowState

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: api.Dockerfile  docker-compose.yml  prometheus.yml
docs/perf/: fp16-vs-fp32.md
scripts/: benchmark.py  smoke.sh
src/flowstate/: __init__.py  config.py  logging.py
src/flowstate/api/: deps.py  errors.py  inference_lifecycle.py  main.py  middleware.py  rate_limit.py  schemas.py
src/flowstate/api/routes/: admin.py  health.py  predict.py
src/flowstate/inference/: batcher.py  postprocess.py  runtime.py  tokenizer.py  warmup.py
src/flowstate/monitoring/: metrics.py
src/flowstate/training/: data.py  evaluate.py  export_onnx.py  register.py  train.py
tests/contract/: test_openapi_contract.py
tests/integration/: conftest.py  test_api_auth_and_limits.py  test_api_predict.py
tests/unit/: test_config.py  test_health.py  test_inference_batcher.py  test_inference_postprocess.py  test_rate_limit.py  test_training_evaluate.py
